@@ -1,6 +1,7 @@
 2005-09-28  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>
 
-	* interface/Makefile.am (EXTRA_DIST): sorry, this file was broken.
+	* interface/Makefile.am (EXTRA_DIST, install.dynamics):
+	  sorry, this file was broken.
 
 2005-09-26 Stas Sergeev <stsp@aknet.ru>
 
